--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Bootstrap Icons CDN -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" rel="stylesheet">
+    
     <style>
         .btn-primary, .text-bg-primary {
             background-color: #33c30f !important;
@@ -31,7 +34,7 @@
         <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
             <div class="col-md-3 mb-2 mb-md-0">
                 <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
-                    <svg class="bi" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
+                    <i class="bi bi-bootstrap" style="font-size: 2rem;"></i>
                 </a>
             </div>
 
@@ -54,54 +57,54 @@
         <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
             <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
                 <h1 class="display-4 fw-bold lh-1 text-body-emphasis">Mango Price Model</h1>
-                <p class="lead">Enter the history Price of Mango:</p>
+                <p class="lead">Enter the historical price of Mango:</p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
                     <form action="/predict" method="post">
-                        <label for="area" class="display-7 lh-1 text-body-emphasis">Enter the history Price of Mango:</label>
-                        <input type="number" id="area" name="area" required>
+                        <label for="price" class="display-7 lh-1 text-body-emphasis">Enter the price history of Mango:</label>
+                        <input type="number" id="price" name="price" required class="form-control mb-3">
                         <button type="submit" class="btn btn-primary btn-lg px-3 me-md-2 fw-bold">Predict</button>
                     </form>
                 </div>
             </div>
             <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
-                <img class="rounded-lg-3" src="bootstrap-docs.png" alt="" width="720">
+                <img class="rounded-lg-3" src="https://via.placeholder.com/720x400" alt="Mango Price Image" width="720">
             </div>
         </div>
 
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
             <div class="feature col">
                 <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-                    <svg class="bi" width="1em" height="1em"><use xlink:href="#collection"></use></svg>
+                    <i class="bi bi-collection"></i>
                 </div>
                 <h3 class="fs-2 text-body-emphasis">Featured title</h3>
                 <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
                 <a href="#" class="icon-link">
                     Call to action
-                    <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
+                    <i class="bi bi-chevron-right"></i>
                 </a>
             </div>
 
             <div class="feature col">
                 <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-                    <svg class="bi" width="1em" height="1em"><use xlink:href="#people-circle"></use></svg>
+                    <i class="bi bi-people-circle"></i>
                 </div>
                 <h3 class="fs-2 text-body-emphasis">Featured title</h3>
                 <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
                 <a href="#" class="icon-link">
                     Call to action
-                    <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
+                    <i class="bi bi-chevron-right"></i>
                 </a>
             </div>
 
             <div class="feature col">
                 <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-                    <svg class="bi" width="1em" height="1em"><use xlink:href="#toggles2"></use></svg>
+                    <i class="bi bi-toggles2"></i>
                 </div>
                 <h3 class="fs-2 text-body-emphasis">Featured title</h3>
                 <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
                 <a href="#" class="icon-link">
                     Call to action
-                    <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
+                    <i class="bi bi-chevron-right"></i>
                 </a>
             </div>
         </div>
