--- a/templates/index.html
+++ b/templates/index.html
@@ -47,8 +47,8 @@
             </ul>
 
             <div class="col-md-3 text-end">
-                <button type="button" class="btn btn-outline-primary me-2">Login</button>
-                <button type="button" class="btn btn-primary">Sign-up</button>
+                <button type="button" class="btn btn-outline-primary me-2" onclick="window.location.href='./loginPage.html'">Login</button>
+
             </div>
         </header>
     </div>
@@ -56,58 +56,33 @@
     <div class="container">
         <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
             <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
-                <h1 class="display-4 fw-bold lh-1 text-body-emphasis">Mango Price Model</h1>
-                <p class="lead">Enter the historical price of Mango:</p>
+                <h1 class="display-4 fw-bold lh-1 text-body-emphasis">Price predictor</h1>
+                <p class="lead fw-bold">Commodity</p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
                     <form action="/predict" method="post">
-                        <label for="price" class="display-7 lh-1 text-body-emphasis">Enter the price history of Mango:</label>
-                        <input type="number" id="price" name="price" required class="form-control mb-3">
+                        <input type="number" id="price" name="price" required class="form-control mb-3" placeholder="Enter the Commodity">
+                        <button type="submit" class="btn btn-primary btn-lg px-3 me-md-2 fw-bold">enter</button>
+                    </form>
+                </div>
+                <p class="lead fw-bold">Location</p>
+                <div class="d-grid gap-200 d-md-flex justify-content-md-start mb-4 mb-lg-10">
+                    <form action="/predict" method="post">
+                        
+                        <input type="number" id="price" name="price" required class="form-control mb-3" placeholder="Enter the location">
+                        <button type="submit" class="btn btn-primary btn-lg px-3 me-md-2 fw-bold">enter</button>
+                    </form>
+                </div>
+                <p class="lead fw-bold">Previous price history</p>
+                <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
+                    <form action="/predict" method="post">
+                        <input type="number" id="price" name="price" required class="form-control mb-3" placeholder="Enter the previous price">
                         <button type="submit" class="btn btn-primary btn-lg px-3 me-md-2 fw-bold">Predict</button>
                     </form>
                 </div>
             </div>
-            <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
-                <img class="rounded-lg-3" src="https://via.placeholder.com/720x400" alt="Mango Price Image" width="720">
-            </div>
         </div>
 
-        <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
-            <div class="feature col">
-                <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-                    <i class="bi bi-collection"></i>
-                </div>
-                <h3 class="fs-2 text-body-emphasis">Featured title</h3>
-                <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-                <a href="#" class="icon-link">
-                    Call to action
-                    <i class="bi bi-chevron-right"></i>
-                </a>
-            </div>
 
-            <div class="feature col">
-                <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-                    <i class="bi bi-people-circle"></i>
-                </div>
-                <h3 class="fs-2 text-body-emphasis">Featured title</h3>
-                <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-                <a href="#" class="icon-link">
-                    Call to action
-                    <i class="bi bi-chevron-right"></i>
-                </a>
-            </div>
-
-            <div class="feature col">
-                <div class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-                    <i class="bi bi-toggles2"></i>
-                </div>
-                <h3 class="fs-2 text-body-emphasis">Featured title</h3>
-                <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-                <a href="#" class="icon-link">
-                    Call to action
-                    <i class="bi bi-chevron-right"></i>
-                </a>
-            </div>
-        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-gof/5fDDsoQsT7f9tlUpP2FfQrR8QfuyZK/CBgwH3HVeyG2nbwKtBPYjY1Goabp9" crossorigin="anonymous"></script>
